# bandcamp-friday-calendar

./: .gitignore  LICENSE  README.md  bandcamp-friday.ics  pyproject.toml
.github/workflows/: deploy-pages.yml  test.yml  update-calendar.yml
scripts/: update_calendar.py
tests/: test_update_calendar.py
