[project]
name = "bandcamp-friday-calendar"
version = "0.1.0"
description = "Subscribe to Bandcamp Friday events in your calendar"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=6.0.0",
]
